--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-horizontal-scrolling-menu": "^0.7.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-simple-infinite-loading": "^1.0.0",
     "reactstrap": "^8.5.1"
   },
   "scripts": {
